--- a/css/style.css
+++ b/css/style.css
@@ -554,3 +554,13 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 .logo-footer-div {
     margin-right: 120px;
 }
+.modal-back {
+    position: absolute;
+width: 408px;
+height: 576px;
+left: 516px;
+top: 88px;
+background: #FCFCFC;
+box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+border-radius: 4px;
+}
