--- a/css/style.css
+++ b/css/style.css
@@ -555,6 +555,7 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     margin-right: 120px;
 }
 .modal-back {
+    margin: 0 auto;
     position: absolute;
 width: 408px;
 height: 576px;
@@ -565,6 +566,7 @@ box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0p
 border-radius: 4px;
 }
 .background-modal {
+    margin: 0 auto;
     position: absolute;
 width: 408px;
 height: 576px;
@@ -575,9 +577,11 @@ box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0p
 border-radius: 4px;
 }
 .back-button {
+    margin: 0 auto;
     position: absolute;
 width: 24px;
 height: 24px;
 left: 876px;
 top: 112px;
+
 }
