--- a/css/style.css
+++ b/css/style.css
@@ -555,7 +555,10 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     margin-right: 120px;
 }
 .modal-back {
+    
     margin: 0 auto;
+    align-items: center; 
+    justify-content: center; 
     position: absolute;
 width: 408px;
 height: 576px;
