--- a/css/style.css
+++ b/css/style.css
@@ -570,20 +570,24 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     margin-right: 120px;
 }
 .backdrop {
+    transition: 250ms;
     position: relative;
 width: 1440px;
 height: 672px;
 }
 .backdrop.is-hidden {
+    transition: 250ms;
     visibility: hidden;
     opacity: 0;
     pointer-events: none;
 }
 .backdrop.is-hidden .modal {
+    transition: 250ms;
 opacity: 0;
 transform: translate(-50%, -50%) scale(0.5);
 } 
 .modal {
+    transition: 250ms;
 position: absolute;
 left: 50%;
 top: 50%;
@@ -595,6 +599,7 @@ box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0p
 border-radius: 4px;
 }
 .close {
+    transition: 250ms;
 position: absolute;
 top: 24px;
 right: 24px;
