--- a/css/style.css
+++ b/css/style.css
@@ -556,3 +556,11 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 .paragraff-card {
     margin-bottom: 20px;
 }
+.backdrop {
+    top: 100%;
+    scale: 250ms;
+ position: relative;
+width: 1440px;
+height: 672px;
+background: #FFFFFF;
+}
