--- a/css/style.css
+++ b/css/style.css
@@ -572,4 +572,10 @@ border-radius: 4px;
         margin-top: 30px;
         width: 360px;
         font: inherit;
+        position: absolute;
+width: 24px;
+height: 24px;
+left: 876px;
+top: 104px;
+
 }
