--- a/css/style.css
+++ b/css/style.css
@@ -568,8 +568,7 @@ box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0p
 border-radius: 4px;
 }
 .close {
-width: 24px;
-height: 24px;
-left: 876px;
-top: 104px;
+    position: absolute;
+    border: #E7E9FC;
+    border-radius: 24px;
 }
