--- a/css/style.css
+++ b/css/style.css
@@ -573,6 +573,7 @@ border-radius: 4px;
     border-radius: 8px;
 }
 .is-hidden {
-    opacity: 0;
     visibility: hidden;
+     opacity: 0;
+    pointer-events: none;
 }
