--- a/css/style.css
+++ b/css/style.css
@@ -569,7 +569,10 @@ border-radius: 4px;
 }
 .close {
     position: absolute;
-    border: #E7E9FC;
+    top: 24px;
+    right: 24px;
+    background: #E7E9FC;
+    border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 8px;
 }
 .is-hidden {
