--- a/css/style.css
+++ b/css/style.css
@@ -544,6 +544,7 @@ ul {
 box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);;
 }
 .portfolio-link:focus {
+    
 box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);;
 }
 .li-four-scr {
@@ -574,6 +575,7 @@ border-radius: 4px;
     border-radius: 8px;
 }
 .is-hidden {
+    translate: 0;
     visibility: hidden;
      opacity: 0;
     pointer-events: none;
