--- a/css/style.css
+++ b/css/style.css
@@ -576,5 +576,7 @@ border-radius: 4px;
     border-radius: 8px;
 }
 .is-hidden {
-    scale: 0;
+    visibility: hidden;
+     opacity: 0;
+    pointer-events: none;
 }
