--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@
     color:#404bbf ;
     text-decoration: none;
 }
-.menu::after {
+.menu:after {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
