--- a/css/style.css
+++ b/css/style.css
@@ -390,8 +390,8 @@
     column-gap: 24px; 
     row-gap: 48px; 
 }
-.li-portfolio {
-    width: calc((100% - 48px) / 3); 
+.li-portfolio.overlay {
+    width: calc((100% - 48px) / 3);   
 }
 .div-li {
     padding: 32px 16px;
