--- a/css/style.css
+++ b/css/style.css
@@ -573,7 +573,7 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     margin-bottom: 20px;
 }
 .backdrop {
-
+    background-color: rgba(0,0,0,0.5);
 }
 .close {
     position: absolute;
