--- a/css/style.css
+++ b/css/style.css
@@ -574,6 +574,7 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 }
 .backdrop {
     background-color: rgba(0,0,0,0.5);
+    background-size: cover;
 }
 .close {
     position: absolute;
@@ -581,7 +582,7 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     right: 24px;
     background: #E7E9FC;
     border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
+    border-radius: 50%;
     cursor: pointer;
 }
 .close:hover {
