--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,12 @@
 .link {
     text-decoration: none;
 }
+.link:hover {
+    color:#404bbf ;
+}
+.link:focus {
+    color:#404bbf ;
+}
 .menu:after {
     font-weight: 500;
     font-size: 16px;
@@ -34,12 +40,7 @@
     letter-spacing: 0.02em;
     color:#2e2f42 ;
 }
-.link:hover {
-    color:#404bbf ;
-}
-.link:focus {
-    color:#404bbf ;
-}
+
 
 .address {
     margin-left: auto;
@@ -246,6 +247,18 @@
     display: block;
     padding: 24px 0;
     margin-right: auto;
+}
+.menu-li:hover {
+    color:#404bbf ;
+    display: flex;
+flex-direction: row;
+align-items: flex-start;
+}
+.menu-li:focus {
+    color:#404bbf ;
+    display: flex;
+flex-direction: row;
+align-items: flex-start;
 }
 .adress-list {
     display: flex;
