--- a/css/style.css
+++ b/css/style.css
@@ -252,12 +252,14 @@
     display: flex;
 flex-direction: row;
 align-items: flex-start;
+text-decoration: solid;
 }
 .menu-li:focus {
     color:#404bbf ;
     display: flex;
 flex-direction: row;
 align-items: flex-start;
+text-decoration: solid;
 }
 .adress-list {
     display: flex;
