--- a/css/style.css
+++ b/css/style.css
@@ -236,9 +236,10 @@
 }
 .menu-li {
     color: #2E2F42;
- display: block;
+    display: block;
     padding: 24px 0;
-    margin-right: auto;   
+    margin-right: auto;
+    text-decoration: none auto;
 }
 .menu-li:after {
     font-weight: 500;
@@ -248,12 +249,16 @@
     color:#2e2f42 ;
 }
 .menu-li:hover {
-    text-decoration: solid;
     color:#404bbf ;
+    font-size: 40px;
+    text-decoration-color: #404bbf;
+    text-decoration-line: underline;
 }
 .menu-li:focus {
-    text-decoration: solid;
     color:#404bbf ;
+    font-size: 40px;
+    text-decoration-color: #404bbf;
+    text-decoration-line: underline;
 }
 .adress-list {
     display: flex;
