--- a/css/style.css
+++ b/css/style.css
@@ -239,7 +239,7 @@
     display: block;
     padding: 24px 0;
     margin-right: auto;
-    text-decoration: none auto;
+    text-decoration: none;
 }
 .menu-li:after {
     font-weight: 500;
