--- a/css/style.css
+++ b/css/style.css
@@ -236,12 +236,14 @@
 }
 .menu-li {
     text-decoration: none;
+    font-weight: 500;
     color: #2E2F42;
     display: block;
     padding: 24px 0;
     margin-right: auto;
 }
-.menu-li:after {
+.menu-lia::after {
+    text-decoration: solid;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -581,8 +583,13 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     margin-bottom: 20px;
 }
 .backdrop {
-    background-color: rgba(0,0,0,0.5);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: rgba(46, 47, 66, 0.4);
     background-size: cover;
+    height: 100%;
 }
 .close {
     position: absolute;
@@ -594,10 +601,10 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     cursor: pointer;
 }
 .close:hover {
-    background-color: #404BBF;
+    background-color: #fff;
 }
 .close:focus {
-    background-color: #404BBF;
+    background-color: #fff;
 }
 .is-hidden {
     visibility: hidden;
@@ -608,12 +615,12 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 .modal {
     position: absolute;
     scale: 250ms; 
-    width: 408px;
+    width: 408;
     height: 584px;
-    left: 516px;
-    top: 80px;
+    left: 50%;
+    top: 50%;
     background: #FCFCFC;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
-    transform: translate(50%);
+    transform: translate(-50%, -50%);
 }
