--- a/css/style.css
+++ b/css/style.css
@@ -606,21 +606,19 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 .close:focus {
     background-color: #fff;
 }
-.backdrop.is-hidden .modal {
-visibility: hidden;
- opacity: 0;
-pointer-events: none;
-scale: 0.5;
+.is-hidden {
+    visibility: hidden;
+     opacity: 0;
+    pointer-events: none;
+    scale: 250ms;
 }
 .modal { 
     position: absolute;
     width: 408px;
     height: 584px;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+    left: 25%;
+    top: 25%;
     background: #FCFCFC;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
-    transform: scale(1);
 }
