--- a/css/style.css
+++ b/css/style.css
@@ -606,11 +606,11 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 .close:focus {
     background-color: #fff;
 }
-.is-hidden {
+.backdrop.is-hidden .modal {
     visibility: hidden;
      opacity: 0;
     pointer-events: none;
-    scale: 250ms;
+    scale: 0.5;
 }
 .modal { 
     position: absolute;
