--- a/css/style.css
+++ b/css/style.css
@@ -606,7 +606,7 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 .close:focus {
     background-color: #fff;
 }
-.backdrop.is-hidden modal  {
+.backdrop.is-hidden  {
     visibility: hidden;
     opacity: 0;
     pointer-events: none;
