--- a/css/style.css
+++ b/css/style.css
@@ -601,10 +601,12 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     cursor: pointer;
 }
 .close:hover {
-    background-color: #fff;
+    background: #404BBF;
+border-radius: 4px;
 }
 .close:focus {
-    background-color: #fff;
+    background: #404BBF;
+border-radius: 4px;
 }
 .is-hidden{
     visibility: hidden;
