--- a/css/style.css
+++ b/css/style.css
@@ -242,14 +242,6 @@
     padding: 24px 0;
     margin-right: auto;
 }
-.menu-lia::after {
-    text-decoration: solid;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color:#2e2f42 ;
-}
 .menu-li:hover {
     color:#404bbf ;
    
@@ -626,16 +618,10 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     border-radius: 4px;
     scale: 2;
 }
-.menu:hover::after {
-    text-decoration: line-through;
-    position: absolute;
-  left: 0;
-  top: 24px;
-  min-width: 200px;
-  border: 1px #aaaaaa solid;
-  border-radius: 10px;
-  background-color: #ffffcc;
-  padding: 12px;
-  color: #000000;
-  font-size: 14px;
+.li-menu::after {
+position: absolute;
+display: block;
+width: 100%;
+height: 6px;
+content: '';
 }
