--- a/css/style.css
+++ b/css/style.css
@@ -627,5 +627,7 @@ content: '';
 background-color: #404BBF;
 }
 .overlay {
+    padding-left: 360px;
+    padding-top: 360px;
     background-color: blue;
 }
