--- a/css/style.css
+++ b/css/style.css
@@ -618,16 +618,12 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     border-radius: 4px;
     scale: 2;
 }
-.li-menu:hover::after {
-position: absolute;
-display: block;
-width: 100%;
-height: 6px;
-content: '';
-background-color: #404BBF;
-}
+.menu-li::after {
+    content: "";
+    width: 24px;
+    height: 24px;
+    background-size: contain;
+  }
 .overlay {
-    padding-left: 360px;
-    padding-top: 360px;
     background-color: blue;
 }
