--- a/css/style.css
+++ b/css/style.css
@@ -620,10 +620,7 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 }
 .menu-li::after {
     content: "";
-    width: 24px;
-    height: 24px;
+    width: 100%;
+    height: 4px;
     background-size: contain;
   }
-.overlay {
-    background-color: blue;
-}
