--- a/css/style.css
+++ b/css/style.css
@@ -618,11 +618,11 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     border-radius: 4px;
     scale: 2;
 }
-.menu-li::after {
+  .menu-li::before,
+  .menu-li::after {
     content: "";
     width: 100%;
     height: 4px;
     background: #404BBF;
-    border-radius: 2;
     background-size: contain;
   }
