--- a/css/style.css
+++ b/css/style.css
@@ -625,4 +625,6 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     height: 4px;
     background: #404BBF;
     background-size: contain;
+    position: relative;
+    top: 20px;
   }
