--- a/css/style.css
+++ b/css/style.css
@@ -627,4 +627,6 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     background-size: contain;
     position: relative;
     top: 20px;
+    text-decoration: line-through;
+    color: black;
   }
