--- a/css/style.css
+++ b/css/style.css
@@ -620,12 +620,16 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 }
   .menu-li:hover::before,
   .menu-li:hover::after {
-    content: "";
+    
+    position: absolute;
+    display: block;
     width: 100%;
     height: 4px;
-    background: #404BBF;
+    content: "";
+    
+    background-color: #404BBF;
     background-size: contain;
-    position: relative;
+   
     top: 20px;
     text-decoration: line-through;
     color: black;
