--- a/css/style.css
+++ b/css/style.css
@@ -616,10 +616,10 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     background: #FCFCFC;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
-    scale: 2;
+
 }
-  .menu-li:hover::before,
-  .menu-li:hover::after {
+  .menu-li::before,
+  .menu-li::after {
     
     position: absolute;
     display: block;
