--- a/css/style.css
+++ b/css/style.css
@@ -624,3 +624,6 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
   width: 100%;
   height: 24px;
 }
+.menu-li:hover::after {
+    display: block;
+  }
