--- a/css/style.css
+++ b/css/style.css
@@ -617,13 +617,13 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     border-radius: 4px;
 
 }
-.menu-li::before,
-.menu-li::after {
+.menu-li::before:active,
+.menu-li::after:active {
   content: '';
   display: inline-block;
   width: 100%;
   height: 24px;
 }
-.menu-li:hover::after {
+.menu-li:hover::after:active {
     display: block;
   }
