--- a/css/style.css
+++ b/css/style.css
@@ -617,13 +617,16 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     border-radius: 4px;
 
 }
-.menu-li::before:active,
-.menu-li::after:active {
-  content: '';
-  display: inline-block;
-  width: 100%;
-  height: 24px;
-}
-.menu-li:hover::after:active {
+.menu-li.link.active::after {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+
     display: block;
-  }
+    content: '';
+    width: 100%;
+    height: 4px;
+
+    background-color: #404BBF;
+    border-radius: 2px;
+}
