--- a/css/style.css
+++ b/css/style.css
@@ -593,11 +593,11 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 }
 .close:hover {
     background: #404BBF;
-    border-radius: 4px;
+    border-radius: 50%;
 }
 .close:focus {
     background: #404BBF;
-    border-radius: 4px;
+    border-radius: 50%;
 }
 .is-hidden{
     visibility: hidden;
