--- a/css/style.css
+++ b/css/style.css
@@ -240,14 +240,16 @@
     color: #2E2F42;
     display: block;
     margin-right: auto;
+    height: 72px;
 }
 .menu-li:hover {
     color:#404bbf ;
+    height: 72px;
    
 }
 .menu-li:focus {
     color:#404bbf ;
-   
+    height: 72px;
 }
 .adress-list {
     display: flex;
