--- a/css/style.css
+++ b/css/style.css
@@ -240,7 +240,16 @@
     color: #2E2F42;
     display: block;
     margin-right: auto;
-    height: 72px;
+    position: absolute;
+width: 48px;
+height: 24px;
+left: 0px;
+top: 0px;
+font-family: 'Roboto';
+font-style: normal;
+font-size: 16px;
+line-height: 24px;
+letter-spacing: 0.02em;
 }
 .menu-li:hover {
     color:#404bbf ;
