--- a/css/style.css
+++ b/css/style.css
@@ -241,15 +241,8 @@
     display: block;
     margin-right: auto;
     position: absolute;
-width: 48px;
-height: 24px;
-left: 0px;
-top: 0px;
-font-family: 'Roboto';
-font-style: normal;
-font-size: 16px;
-line-height: 24px;
-letter-spacing: 0.02em;
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
 .menu-li:hover {
     color:#404bbf ;
