--- a/css/style.css
+++ b/css/style.css
@@ -252,6 +252,14 @@
     color:#404bbf ;
    
 }
+nav a.menu-li::after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 2px;
+    background-color: #000;
+    margin-top: 3px;
+  }
 .adress-list {
     display: flex;
     gap: 40px;
