--- a/css/style.css
+++ b/css/style.css
@@ -237,16 +237,17 @@
 .menu-li {
     text-decoration: none;
     font-weight: 500;
-    color: #2E2F42;
+    color: #404bbf;
     display: block;
     margin-right: auto;
+    position: relative;
     padding-top: 24px;
     padding-bottom: 24px;
     display:block;
 }
 .menu-li:hover {
     color:#404bbf ;
-   
+    
 }
 .menu-li:focus {
     color:#404bbf ;
@@ -254,11 +255,13 @@
 }
 nav a.menu-li::after {
     content: '';
-    display: block;
-    width: 100%;
-    height: 2px;
-    background-color: #000;
-    margin-top: 3px;
+    position: absolute; 
+    left: 0; 
+    bottom: -1px; 
+    height: 4px; 
+    background-color: #404bbf;
+    border-radius: 2px; 
+    transition:  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   nav a.menu-li::after {
     content: '';
