--- a/css/style.css
+++ b/css/style.css
@@ -254,22 +254,17 @@
     color:#404bbf ;
    
 }
-nav a.menu-li::after {
+.menu-li::after {
     content: '';
+    display: block;
     position: absolute; 
     left: 0; 
     bottom: -1px; 
     height: 4px; 
     background-color: #404bbf;
     border-radius: 2px; 
-  }
-  nav a.menu-li::after {
-    content: '';
-    display: block;
-    width: 100%;
-    height: 2px;
-    background-color: #000;
-    margin-top: 3px;
+    background-color: #404bbf;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   
 .adress-list {
