--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,8 @@
     color:#ffffff ;
     background-color:#404BBF ;
     cursor: pointer;
-    background-color: #4D5AE5 
+    background-color: #4D5AE5 ;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .title {
@@ -289,6 +290,7 @@
     background-color: #4d5ae5;
     border-radius: 4px;
     cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .section-two {
     padding: 120px 0;
@@ -331,6 +333,7 @@
     width: calc((100% - 72px) / 4);
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
     border-radius: 0px 0px 4px 4px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
 }
 .div-four {
     padding: 32px 16px;
