--- a/css/style.css
+++ b/css/style.css
@@ -494,7 +494,8 @@ ul {
 }
 .li-five {
     width: calc((100% - 120px) / 6);
-    height: 88px; 
+    height: 88px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 .link-five {
     width: 100%;
