--- a/css/style.css
+++ b/css/style.css
@@ -650,3 +650,12 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
+.svg {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
+.svg:hover {
+    fill: #ffffff
+}
+.svg:focus {
+    fill: #ffffff
+}
