--- a/css/style.css
+++ b/css/style.css
@@ -238,7 +238,7 @@
 .menu-li {
     text-decoration: none;
     font-weight: 500;
-    color: #404bbf;
+    color: #2E2F42;
     display: block;
     margin-right: auto;
     position: relative;
