--- a/css/style.css
+++ b/css/style.css
@@ -415,7 +415,6 @@
 }
 .li-portfolio {
     width: calc((100% - 48px) / 3);   
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 .div-li {
     padding: 32px 16px;
@@ -581,14 +580,15 @@ ul {
 }
 .portfolio-link {
     display: block; 
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 .portfolio-link:hover {
-box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);;
-transform: translateY(0%);
+    transform: translateY(0%);
+box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .portfolio-link:focus {
-box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);;
-transform: translateY(0%);
+    transform: translateY(0%);
+box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .li-four-scr {
     width: 40px;
