--- a/css/style.css
+++ b/css/style.css
@@ -677,6 +677,7 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     background-color: #4d5ae5;
     height: 100%;
     width: 100%;
+    padding: 40px 32px;
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
