--- a/css/style.css
+++ b/css/style.css
@@ -247,6 +247,7 @@
     padding-bottom: 24px;
     display:block;
     transition:  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color: #404bbf; 
 }
 .menu-li:hover {
     color:#404bbf ;
@@ -267,6 +268,7 @@
     border-radius: 2px; 
     background-color: #404bbf;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color: #404bbf; 
   }
   
 .adress-list {
