--- a/css/style.css
+++ b/css/style.css
@@ -683,3 +683,6 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
+.li-nav {
+    transition:  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
