--- a/css/style.css
+++ b/css/style.css
@@ -468,7 +468,8 @@ ul {
     border-radius:  50%;
     display: flex;
     align-items: center;
-    justify-content: center;   
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);;   
 }
 .link-four:focus {
     transition: 250ms ;
@@ -499,7 +500,6 @@ ul {
 .li-five {
     width: calc((100% - 120px) / 6);
     height: 88px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 .link-five {
     width: 100%;
@@ -510,7 +510,7 @@ ul {
     align-items: center; 
     justify-content: center; 
     color:#8e8f99;
-
+    transition:  border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .link-five:hover {
     transition: 250ms ;
@@ -688,3 +688,4 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+link-five
