--- a/css/style.css
+++ b/css/style.css
@@ -172,6 +172,12 @@
     letter-spacing: 0.02em;
     color: #434455;
 }
+.paragraff-portfolio:hover {
+    translate:Y(0%) ;
+}
+.paragraff-portfolio:focus {
+    translate:Y(0%) ;
+}
 .section {
     background-color: #2e2f42;
 }
@@ -685,3 +691,4 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+paragraff-portfolio
