--- a/css/style.css
+++ b/css/style.css
@@ -691,4 +691,28 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-paragraff-portfolio
+.menu-li:hover,
+.menu-li:focus {
+  color: var(--accent-txt-cl);
+}
+.menu-li::after {
+  content: '';
+  position: absolute;
+  bottom: 12px;
+  left: 0;
+
+  display: block;
+  width: 100%;
+  height: 4px;
+  border-radius: 4px;
+
+  transition: background-color var(--anim-fast);
+}
+.menu-li.current {
+  color: var(--accent-txt-cl);
+}
+.menu-li.current::after,
+.menu-li:hover::after,
+.menu-li:focus::after {
+  background-color: var(--accent-bg-cl);
+}
