--- a/css/style.css
+++ b/css/style.css
@@ -263,6 +263,18 @@
     color:#404bbf ;
    
 }
+.menu-li::after {
+    content: '';
+    display: block;
+    position: absolute; 
+    left: 0; 
+    bottom: -1px; 
+    height: 4px; 
+    border-radius: 2px; 
+    background-color: #404bbf;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color: #404bbf; 
+  }
 .adress-list {
     display: flex;
     gap: 40px;
@@ -685,13 +697,14 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
   position: absolute;
   bottom: 12px;
   left: 0;
-
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   display: block;
   width: 100%;
   height: 4px;
   border-radius: 4px;
   bottom: -1px;
   border-radius: 2px; 
+  background-color: #404bbf;
   transition: background-color var(--anim-fast);
 }
 .menu-li.current {
@@ -701,5 +714,5 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 .menu-li:hover::after,
 .menu-li:focus::after {
   background-color: var(--accent-bg-cl);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-paragraff-portfolio
