--- a/css/style.css
+++ b/css/style.css
@@ -596,6 +596,9 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     transform: translateY(0%);
 box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
+.portfolio-link:focus-within p {
+    transform: translateY(0%);
+  }
 .li-four-scr {
     width: 40px;
     height: 40px;
