--- a/css/style.css
+++ b/css/style.css
@@ -599,7 +599,7 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 .portfolio-link:focus-within p {
     transform: translateY(0%);
   }
-.portfolio-link a:hover + p {
+.portfolio-link:hover p {
     transform: translateY(0%);
   }
 .li-four-scr {
