--- a/css/style.css
+++ b/css/style.css
@@ -275,6 +275,9 @@
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     color: #404bbf; 
   }
+a {
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 .adress-list {
     display: flex;
     gap: 40px;
