--- a/css/style.css
+++ b/css/style.css
@@ -254,13 +254,31 @@
     display:block;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.menu-li:hover {
+  .menu-li:hover,
+  .menu-li:focus {
     color:#404bbf ;
-}
-.menu-li:focus {
-    color:#404bbf ;
-}
-
+  }
+  .menu-li::after {
+    content: '';
+    position: absolute;
+    bottom: 12px;
+    left: 0;
+  
+    display: block;
+    width: 100%;
+    height: 4px;
+    border-radius: 4px;
+  
+    transition: background-color var(--anim-fast);
+  }
+  .menu-li.current {
+    color: #404bbf ;
+  }
+  .menu-li.current::after,
+  .menu-li:hover::after,
+  .menu-li:focus::after {
+    background-color: #404bbf ;
+  }
 a {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
@@ -682,25 +700,4 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
 .li-nav {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.menu-li:hover::after {
-  content: '';
-  position: absolute;
-  bottom: 12px;
-  left: 0;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  display: block;
-  width: 100%;
-  height: 4px;
-  border-radius: 4px;
-  bottom: -1px;
-  border-radius: 2px; 
-  background-color: #404bbf;
-  transition: background-color var(--anim-fast);
-}
-.menu-li.current:hover::after,
-.menu-li:hover:hover::after,
-.menu-li:focus:hover::after {
-  background-color: var(--accent-bg-cl);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
