--- a/css/style.css
+++ b/css/style.css
@@ -253,6 +253,7 @@
     padding-bottom: 24px;
     display:block;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color: #404bbf; 
 }
   .menu-li:hover,
   .menu-li:focus {
@@ -263,7 +264,9 @@
     position: absolute;
     bottom: 12px;
     left: 0;
-  
+    bottom: -1px; 
+    background-color: #404bbf;
+    border-radius: 2px;
     display: block;
     width: 100%;
     height: 4px;
