--- a/css/style.css
+++ b/css/style.css
@@ -253,7 +253,10 @@
     padding-bottom: 24px;
     display:block;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    color: #404bbf; 
+   
+}
+.current {
+     color: #404bbf; 
 }
   .menu-li:hover,
   .menu-li:focus {
